<resources>
    <string name="app_name">Android2023</string>
    <string name="hint_age">Nhập tuổi</string>
    <string name="hint_username">Nhập tên của bạn</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="search">Tìm kiếm</string>
    <string name="info">Thông tin</string>
    <string name="pdf_reader">PDF READER</string>
    <string name="recent_book">Recent Book</string>
    <string name="icon_pdf">icon_pdf</string>
    <string name="add">Thêm</string>
    <string name="add_signal">+</string>
    <string name="folder">Folder Manager</string>
    <string name="icon_folder">icon_folder</string>
    <string name="example_text">Video</string>
    <string name="icon_close">icon_close</string>
    <string name="icon_note">icon_note</string>
    <string name="notification">Các thông tin các nhân chính xác giúp chúng tôi mang lại cho bạn những thông tin thú vị chính xác theo đúng thông tin của bạn.</string>
    <string name="full_name_title">Họ tên đầy đủ <font color="#E40000">*</font></string>
    <string name="tvDateTitle">Ngày sinh <font color="#E40000">*</font></string>
    <string name="tvPhoneTitle">Số ĐT <font color="#E40000">*</font></string>
    <string name="email_title">Email <font color="#E40000">*</font></string>
    <string name="cmt_title">Số CMT <font color="#E40000">*</font></string>

</resources>