<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="66dp">

    <ImageView
        android:id="@+id/imvFolder"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon_folder"
        android:src="@drawable/ic_folder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFolderName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_regular"
        android:maxLines="1"
        android:text="@string/example_text"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imvFolder"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtFolderName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_regular"
        android:maxLines="1"
        android:text="@string/example_text"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imvFolder"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imbDelete"
        android:layout_width="32sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:adjustViewBounds="true"
        android:background="#ffffff"
        android:contentDescription="@string/icon_close"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imbFix"
        android:layout_width="26sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:adjustViewBounds="true"
        android:background="#ffffff"
        android:contentDescription="@string/icon_note"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imbDelete"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        android:background="#DFDBDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>