<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".B3Activity">

    <EditText
        android:layout_gravity="center"
        android:id="@+id/edtText"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/edtNumber"
        android:hint="@string/hint_age"
        android:inputType="number"
        android:layout_width="200dp"
        android:layout_height="50dp" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/tvText"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textColor="#DD4C1E"
        android:fontFamily="@font/roboto_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/tvNumber"
        android:text="2003"
        android:textSize="25sp"
        android:textColor="#DD4C1E"
        android:fontFamily="@font/roboto_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/ic_food"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="300dp" />

    <CheckBox
        android:id="@+id/cbCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <RadioButton
            android:text="Nam"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="Nữ"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>



</LinearLayout>